development/sf_project/force-app/main/default/objects/CarePlanTemplate/fields/ICD10_Code__c.field-meta.xml
<CustomField>
    <fullName>ICD10_Code__c</fullName>
    <label>ICD-10 Code</label>
    <type>Text</type>
    <length>10</length>
    <description>ICD-10 condition code associated with this care plan template</description>
    <inlineHelpText>ICD-10 code (e.g., E11 for Type 2 Diabetes)</inlineHelpText>
</CustomField>