development/sf_project/force-app/main/default/objects/CarePlanTemplate/fields/MOH_Guideline_Ref__c.field-meta.xml
<CustomField>
    <fullName>MOH_Guideline_Ref__c</fullName>
    <label>MOH Guideline Ref</label>
    <type>Url</type>
    <description>Link to the Singapore MOH clinical practice guideline for this condition</description>
    <inlineHelpText>URL to relevant MOH clinical guideline</inlineHelpText>
</CustomField>