development/sf_project/force-app/main/default/objects/CarePlanTemplate/fields/Previous_Version__c.field-meta.xml
<CustomField>
    <fullName>Previous_Version__c</fullName>
    <label>Previous Version</label>
    <type>Lookup</type>
    <referenceTo>CarePlanTemplate</referenceTo>
    <relationshipName>NewerVersions</relationshipName>
    <relationshipLabel>Newer Versions</relationshipLabel>
    <description>Links to the previous version of this template for version chain tracking.</description>
    <inlineHelpText>The prior version this template was cloned from</inlineHelpText>
</CustomField>