development/sf_project/force-app/main/default/objects/CarePlanTemplate/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <defaultValue>1</defaultValue>
    <description>Template version number. Incremented when template is cloned for update.</description>
    <inlineHelpText>Version number of this care plan template</inlineHelpText>
</CustomField>